--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -3,7 +3,7 @@ packages:
     gcc-c++: []
     libxml2-devel: []
     libxslt-devel: []
-    python-devel: []
+    python3-devel: []
 
 sources:
   /var/fleetmap: https://github.com/fleetmap-io/odoo-fleetmap-addons/archive/refs/heads/master.zip
